--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,17 @@
-version: "2.2"
+version: "3"
 
 services:
   mysql:
-    image: mysql:8.2
+    image: mysql 8.0
+    container_name: mysql_db
     ports:
       - "3306:3306"
     environment:
+      environment:
       - MYSQL_ROOT_PASSWORD=
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
       - MYSQL_USER=petclinic
       - MYSQL_PASSWORD=petclinic
       - MYSQL_DATABASE=petclinic
     volumes:
-      - "./conf.d:/etc/mysql/conf.d:ro"
-    profiles:
-      - mysql
-  postgres:
-    image: postgres:16.1
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=petclinic
-      - POSTGRES_USER=petclinic
-      - POSTGRES_DB=petclinic
-    profiles:
-      - postgres
+      - "./src/main/resources/db/mysql/usr.sql:/docker-entrypoint-initdb.d/usr.sql"
